# solen

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  Solen_Architecture_and_Implementation_Guide.docx  Solen_Whitepaper.docx  TOKENOMICS.md  deny.toml  genesis-mainnet.json
crates/solen-cli/: Cargo.toml  README.md
crates/solen-cli/src/: commands.rs  main.rs  rpc.rs  wallet.rs
crates/solen-consensus/: Cargo.toml  README.md
crates/solen-consensus/src/: checkpoint.rs  encrypted_mempool.rs  engine.rs  epoch.rs  events.rs  lib.rs  mempool.rs  slashing.rs  snapshot.rs  validator.rs
crates/solen-consensus/tests/: adversarial_tests.rs
crates/solen-contract-sdk/: Cargo.toml  README.md
crates/solen-contract-sdk/src/: lib.rs
crates/solen-crypto/: Cargo.toml  README.md
crates/solen-crypto/src/: hash.rs  lib.rs  pq.rs  signing.rs
crates/solen-execution/: Cargo.toml  README.md
crates/solen-execution/benches/: rollback_bench.rs  tps.rs
crates/solen-execution/src/: executor.rs  fees.rs  genesis.rs  lib.rs  proof.rs  receipt.rs  state.rs  system_calls.rs
crates/solen-execution/tests/: adversarial_execution_tests.rs  msg_value_tests.rs  passkey_tests.rs  property_tests.proptest-regressions  property_tests.rs  queue_call_tests.rs  rollup_committee_tests.rs  security_tests.rs  stsolen_lifecycle.rs
crates/solen-faucet/: Cargo.toml
crates/solen-faucet/src/: main.rs
crates/solen-indexer/: Cargo.toml  README.md
crates/solen-indexer/src/: api.rs  indexer.rs  lib.rs  store.rs  stsolen_apy.rs
crates/solen-intents/: Cargo.toml  README.md
crates/solen-intents/src/: lib.rs  pool.rs  solver.rs  types.rs
crates/solen-intents/tests/: pool_security_tests.rs
crates/solen-node/: Cargo.toml  README.md
crates/solen-node/src/: genesis_config.rs  main.rs
crates/solen-p2p/: Cargo.toml  README.md
crates/solen-p2p/src/: behaviour.rs  lib.rs  messages.rs  network.rs  reputation.rs
crates/solen-p2p/tests/: message_tests.rs
crates/solen-rollup-kit/: Cargo.toml  README.md
crates/solen-rollup-kit/src/: batch.rs  lib.rs  messenger.rs  prover.rs  relayer.rs  sequencer.rs
crates/solen-rollup-kit/tests/: rollup_e2e.rs
crates/solen-rpc/: Cargo.toml  README.md
crates/solen-rpc/src/: lib.rs  methods.rs  server.rs
crates/solen-storage/: Cargo.toml  README.md
crates/solen-storage/src/: lib.rs  memory.rs  merkle.rs  overlay.rs  rocks.rs  traits.rs
crates/solen-storage/tests/: determinism_tests.rs
crates/solen-system-contracts/: Cargo.toml  README.md
crates/solen-system-contracts/src/: bridge.rs  governance.rs  guardian.rs  lib.rs  proof_registry.rs  staking.rs  treasury.rs  vesting.rs
crates/solen-types/: Cargo.toml  README.md
crates/solen-types/src/: account.rs  block.rs  crypto.rs  encoding.rs  lib.rs  rollup.rs  system.rs  transaction.rs
crates/solen-vm/: Cargo.toml  README.md
crates/solen-vm/src/: host.rs  lib.rs  metering.rs  runtime.rs
crates/solen-vm/tests/: sandbox_tests.rs
data/solen-db/: IDENTITY  LOG
deploy/: README.md
deploy/mainnet/: genesis.example.json
deploy/monitor/: config.json  fleet_monitor.py
deploy/runbooks/: activate-emergency-fasttrack.md  consensus-fork-recovery.md  rollout-canonicity-failopen-2026-07.md  rollout-memleak-fix-2026-07.md  rollout-pq-phase1-dormant-2026-07.md  rollout-pq-phase3-activation-2026-07.md  rollout-stateroot-fixes-2026-07.md
deploy/testnet/: genesis.json  nginx.conf  setup-validator.sh  setup.sh  solen-faucet.service  solen-node.service
docs/: tutorial-build-your-first-dapp.md
examples/: README.md
examples/contracts/attack/: Cargo.toml
examples/contracts/attack/src/: lib.rs
examples/contracts/counter/: Cargo.toml
examples/contracts/counter/src/: lib.rs
examples/contracts/nft/: Cargo.toml
examples/contracts/nft/src/: lib.rs
examples/contracts/stsolen/: AUDIT.md  Cargo.toml
examples/contracts/stsolen/src/: lib.rs
examples/contracts/token/: Cargo.toml  README.md
examples/contracts/token/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_executor.rs  fuzz_p2p_message.rs  fuzz_passkey.rs  fuzz_snapshot.rs  fuzz_system_call_args.rs  fuzz_threshold_auth.rs  fuzz_tx_decode.rs  fuzz_vm.rs
scripts/: README.md  solen-manage.sh
sdks/wallet-sdk-rs/: Cargo.toml  README.md
sdks/wallet-sdk-rs/src/: account.rs  auth.rs  lib.rs  policy.rs  recovery.rs  sponsor.rs  tx.rs
sdks/wallet-sdk-ts/: package-lock.json  package.json
sdks/wallet-sdk-ts/data/solen-db/: IDENTITY  LOG  OPTIONS-000007
sdks/wallet-sdk-ts/src/: account.ts  client.test.ts  client.ts  index.ts  signing.test.ts  signing.ts  types.ts  utils.ts
sdks/wallet-sdk-ts/test/: pq_vectors.json
specs/: 001-terminology.md  002-state-model.md  003-rpc-api.md  README.md
tools/account-census/: Cargo.toml
tools/account-census/src/: main.rs
tools/bench/: Cargo.toml  main.rs
tools/devnet/: DRILL.md  README.md  devnet-config.toml  drill-genesis-7.json  drill-genesis.json  fork-choice-v2-drill.sh  launch.sh  partition-drill.sh  pq-auth-drill.sh  pq-drill-genesis-3.json
tools/explorer/: README.md  package.json  tsconfig.json
tools/explorer/src/app/: layout.tsx  page.tsx
tools/stsolen-admin/: Cargo.toml
tools/stsolen-admin/src/: main.rs
tools/stsolen-deploy/: Cargo.toml
tools/stsolen-deploy/src/: main.rs
tools/stsolen-deposit/: Cargo.toml
tools/stsolen-deposit/src/: main.rs
tools/submit-batch/: Cargo.toml  main.rs
tools/vectors/: Cargo.toml  main.rs  vectors.json
