[package]
name = "solen-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
solen-types = { path = "../crates/solen-types" }
solen-crypto = { path = "../crates/solen-crypto" }
solen-execution = { path = "../crates/solen-execution" }
solen-storage = { path = "../crates/solen-storage" }
solen-vm = { path = "../crates/solen-vm" }
solen-p2p = { path = "../crates/solen-p2p" }
solen-consensus = { path = "../crates/solen-consensus" }
serde_json = "1"

[[bin]]
name = "fuzz_executor"
path = "fuzz_targets/fuzz_executor.rs"
doc = false

[[bin]]
name = "fuzz_vm"
path = "fuzz_targets/fuzz_vm.rs"
doc = false

[[bin]]
name = "fuzz_tx_decode"
path = "fuzz_targets/fuzz_tx_decode.rs"
doc = false

[[bin]]
name = "fuzz_passkey"
path = "fuzz_targets/fuzz_passkey.rs"
doc = false

[[bin]]
name = "fuzz_p2p_message"
path = "fuzz_targets/fuzz_p2p_message.rs"
doc = false

[[bin]]
name = "fuzz_snapshot"
path = "fuzz_targets/fuzz_snapshot.rs"
doc = false

[[bin]]
name = "fuzz_threshold_auth"
path = "fuzz_targets/fuzz_threshold_auth.rs"
doc = false

[[bin]]
name = "fuzz_system_call_args"
path = "fuzz_targets/fuzz_system_call_args.rs"
doc = false
