[package]
name = "solen-consensus"
description = "BFT proof-of-stake consensus engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
solen-types = { workspace = true }
solen-crypto = { workspace = true }
solen-execution = { workspace = true }
solen-p2p = { workspace = true }
solen-storage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
