[package]
name = "solen-crypto"
description = "Cryptographic primitives for Solen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
solen-types = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2 = { workspace = true }
blake3 = { workspace = true }
rand = "0.8"
fips204 = "0.4.6"
thiserror = { workspace = true }
