[package]
name = "solen-execution"
description = "Settlement execution engine, state management, proof verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
solen-types = { workspace = true }
solen-crypto = { workspace = true }
solen-vm = { workspace = true }
solen-storage = { workspace = true }
solen-system-contracts = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "tps"
harness = false

[dev-dependencies]
proptest = { workspace = true }
wat = "1"
