[package]
name = "solen-execution"
description = "Settlement execution engine, state management, proof verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
solen-types = { workspace = true }
solen-crypto = { workspace = true }
solen-vm = { workspace = true }
solen-storage = { workspace = true }
solen-system-contracts = { workspace = true }
solen-rollup-kit = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "tps"
harness = false

[[bench]]
name = "rollback_bench"
harness = false

[dev-dependencies]
proptest = { workspace = true }
wat = "1"
rand = "0.8"
p256 = { workspace = true }
sha2 = { workspace = true }
