[package]
name = "solen-faucet"
description = "Testnet faucet HTTP service for the Solen network"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "solen-faucet"
path = "src/main.rs"

[dependencies]
solen-types = { workspace = true }
solen-crypto = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
