[package]
name = "solen-intents"
description = "Intent-aware execution: users express outcomes, solvers compete to fulfill them"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
solen-types = { workspace = true }
solen-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
