[package]
name = "solen-node"
description = "Solen validator node binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "solen-node"
path = "src/main.rs"

[features]
default = ["rocksdb"]
rocksdb = ["solen-storage/rocksdb"]
# Heap profiling: build with `--features dhat-heap` to write dhat-heap.json on
# clean shutdown (SIGINT). Never in the default/production build. Diagnostic only.
dhat-heap = ["dep:dhat"]

[dependencies]
solen-types = { workspace = true }
solen-crypto = { workspace = true }
solen-consensus = { workspace = true }
solen-execution = { workspace = true }
solen-rpc = { workspace = true }
solen-indexer = { workspace = true }
solen-p2p = { workspace = true }
solen-storage = { workspace = true }
solen-system-contracts = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dhat = { version = "0.3", optional = true }
