[package]
name = "solen-rollup-kit"
description = "Rollup framework: sequencer, batch publisher, prover adapter, messenger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
solen-types = { workspace = true }
solen-crypto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
