[package]
name = "solen-rpc"
description = "JSON-RPC server and event indexing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
solen-types = { workspace = true }
solen-execution = { workspace = true }
solen-consensus = { workspace = true }
solen-system-contracts = { workspace = true }
solen-storage = { workspace = true }
solen-vm = { workspace = true }
solen-intents = { workspace = true }
tokio = { workspace = true }
jsonrpsee = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
