[package]
name = "solen-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solen-bench"
path = "main.rs"

[dependencies]
solen-types = { path = "../../crates/solen-types" }
solen-crypto = { path = "../../crates/solen-crypto" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
