[package]
name = "solen-vectors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solen-vectors"
path = "main.rs"

[dependencies]
solen-types = { path = "../../crates/solen-types" }
solen-crypto = { path = "../../crates/solen-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
